infra/proxy/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-srv
#   annotations:
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/proxy-body-size: "50m" # Adjust the value as needed
# spec:
#   rules:
#   - host: echoblog.live
#     http:
#       paths:
#       - path: /api/user/?(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: user-service
#             port:
#               number: 4001
#   - host: echoblog.live
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: client-service
#             port:
#               number: 5173
#   ingressClassName: nginx

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/websocket-services: "chat-service"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/websocket-services: chat-service
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - host: echoblog.live
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 4000
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 4001
          - path: /api/post/?(.*)
            pathType: Prefix
            backend:
              service:
                name: post-service
                port:
                  number: 4002
          - path: /api/group/?(.*)
            pathType: Prefix
            backend:
              service:
                name: group-service
                port:
                  number: 4003
          - path: /api/chat/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 4004
          - path: /socket.io/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 4004
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 5173

  ingressClassName: nginx
